-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.0 Beta2
-
None
-
1527f759b (dev), c12756226 (6.8)
Building a Qt Quick based project for Qt 6.8.0 beta2 shows following warning at configure time:
Warnings while parsing QML type information of C:\Qt\6.8.0\android_arm64_v8a\qml\QtCharts: Failed to parse "C:\Qt\6.8.0\android_arm64_v8a\qml\QtCharts\plugins.qmltypes". Error: C:\Qt\6.8.0\android_arm64_v8a\qml\QtCharts\plugins.qmltypes:5546:9: Property object is missing a name or type script binding.
- is required for
-
QDS-13234 QtChart module can't be added to project
-
- Closed
-
- resulted from
-
QTBUG-126452 qmltyperegistrar: Build warnings in qtcharts
-
- Closed
-
For Gerrit Dashboard: QTBUG-127330 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
581332,2 | qmltyperegistrar: Preserve void* as property type | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
581785,3 | qmltyperegistrar: Preserve void* as property type | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |