qmltyperegistrar: Preserve void* as property type

We omit void as method return type, but that doesn't mean we can omit
void* as property type.

Pick-to: 6.8
Fixes: QTBUG-127330
Change-Id: Ief812210c071b4ea41f706778812dad4fafaa949
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>